# the_ultimate_cpp_series

./: CMakeLists.txt  README.md  main.cpp  playground.cpp
part-1-fundamentals/1-the-basics/: 1_swap_variables.cpp  2_calculate_expression.cpp  3_sales_tax_calculator.cpp  4_calculate_user_age.cpp  5_fahrenheit_to_celsius.cpp  6_area_of_a_circle.cpp  basics.h
part-1-fundamentals/2-fundamental-data-types/: 1_roll_the_dice.cpp  2_formatted_output_table.cpp  3_address_input_using_getline.cpp  4_storing_and_retrieving_data_from_an_array.cpp  5_type_conversion.cpp  fundamental-data-types.h
part-1-fundamentals/3-decision-making/: 1_job_eligibility.cpp  2_commission_calculation.cpp  3_larger_number.cpp  4_basic_calculator_using_switch.cpp  decision_making.h
part-1-fundamentals/4-loops/: 1_factorial-calculator.cpp  2_average-temperature.cpp  3_secret_number.cpp  4_secret_number_simplified.cpp  5_star_pattern.cpp  loops.h
part-1-fundamentals/5-functions/: 1_max_of_two_numbers.cpp  functions.h
part-2-intermediate/1-arrays/: 1_copy_from_one_array_to_another.cpp  2_comparing_arrays.cpp  3_structured_binding.cpp  4_linear_search_algorithm.cpp  5_bubble_sort_algorithm.cpp  6_multi-dimensional-array.cpp  6_multi_dimensional_array.cpp  arrays.h
part-2-intermediate/2-pointers/: 1_modify_with_pointers.cpp  2_swap_using_pointers.cpp  2_swap_variable_values_using_pointers.cpp  3_reverse_iteration_using_pointer.cpp  pointers.h
part-2-intermediate/3-strings/: 1_searching_characters_in_strings.cpp  2_extracting_substrings.cpp  3_customer_number_validation.cpp  strings.h
part-2-intermediate/4-structures-and-enumerations/: 1_represent_customers_via_structures.cpp  2_vector_iteration_with_user_defined_objects.cpp  3_enhanced_customer_object_with_nested_struct.cpp  4_operator_overloading_to_compare_and_stream_points.cpp  structures-and-enumerations.h
part-2-intermediate/5-streams-and-files/: 1_handling_input_stream_errors_with_reusable_logic.cpp  2_writing_to_files.cpp  3_reading_from_files.cpp  4_converting_numbers_to_strings.cpp  5_parsing_text_into_objects_with_streams.cpp  streams_and_files.h
part-3-advanced/1-classes/: classes.h
part-3-advanced/1-classes/1-textbox-class/: TextBox.cpp  TextBox.h  Textbox.cpp  Textbox.h  exercise_textbox.cpp
part-3-advanced/1-classes/2-rectangle-class/: Rectangle.cpp  Rectangle.h  exercise_rectangle.cpp
part-3-advanced/1-classes/3-person-class/: Person.cpp  Person.h  exercise-person.cpp
part-3-advanced/1-classes/4-smartpointer-class/: SmartPointer.cpp  SmartPointer.h  exercise-smartpointer.cpp  exercise_smartpointer.cpp
part-3-advanced/2-operator-overloading/: operator_overloading.h
part-3-advanced/2-operator-overloading/1-length-class/: Length.cpp  Length.h  exercise_length.cpp
part-3-advanced/2-operator-overloading/2-point-class/: Point.cpp  Point.h  exercise_point.cpp
part-3-advanced/2-operator-overloading/3-array-class/: Array.cpp  Array.h  exercise_array.cpp
part-3-advanced/3-inheritance-and-polymorphism/: inheritance-and-polymorphism.h
part-3-advanced/3-inheritance-and-polymorphism/1-widget-class/: Widget.cpp  Widget.h  exercise_widget.cpp
part-3-advanced/3-inheritance-and-polymorphism/2-shape-class/: Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  exercise_shape.cpp
part-3-advanced/3-inheritance-and-polymorphism/3-checkbox-class/: CheckBox.cpp  CheckBox.h
part-3-advanced/3-inheritance-and-polymorphism/4-fileio-class/: FileIO.cpp  FileIO.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  exercise_fileio.cpp
part-3-advanced/4-exceptions/: 1-rectangle-exception.cpp  2-catching-exceptions.cpp  3-custom-exceptions.cpp  AccountLocked.cpp  AccountLocked.h  exceptions.h
part-3-advanced/5-templates/: 1-function-template.cpp  2-template-with-multiple-parameters.cpp  3-class-template.cpp  Pair.cpp  Pair.h  templates.h
playground/: playground.cpp  playground.h
playground/rectangle-lesson/: RectangleLesson.cpp  RectangleLesson.h
